fixed z-index issues

--- a/site/_css/hero.less
+++ b/site/_css/hero.less
@@ -15,6 +15,7 @@
 }
 
 .hero {
+  z-index: 1;
   position: relative;
   display: flex;
   justify-content: center;
