--- a/site/_css/index.less
+++ b/site/_css/index.less
@@ -23,7 +23,7 @@ body.index {
   }
 
   .nav-header {
-    z-index: 0;
+    z-index: 1;
   }
 
   section h1,
@@ -47,7 +47,6 @@ body.index {
   .grayWash {
     background: #e6e8ec;
     position: relative;
-    z-index: -1;
   }
 
   .darkWash {
